--- a/partsAvailability/webapp/css/style.css
+++ b/partsAvailability/webapp/css/style.css
@@ -43,3 +43,8 @@
     font-size: 1.375rem;
      border-bottom: 0rem solid #999999; 
 }
+
+.myFormBorder {
+	border-style: solid;
+    border-width: 2px;
+}
